# ereader

./: .gitignore  README.md  epubparser.py  ereader.css  ereader.py  main.py  persistentdict.py  pyproject.toml  readarea.py  readview.py  utils.py  webview.py
ereader/: epubparser.py  ereader.py  ereader.qss  main.py  persistentdict.py  readview.py  tocview.py  utils.py  webview.py
ereader/gui/: __init__.py  ereader.css  ereader.py  ereader.qss  readview.py  readwidget.py  tocwidget.py  webview.py
ereader/utils/: __init__.py  epubparser.py  functions.py
